Fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -918,7 +918,7 @@ body {
     gap: 15px;
     border-bottom: 2px solid #000;
     padding-bottom: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     page-break-inside: avoid;
   }
 
@@ -970,7 +970,7 @@ body {
   .invoice-table {
     width: 100%;
     border-collapse: collapse;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
 
   .invoice-table th,
@@ -995,6 +995,8 @@ body {
     grid-template-columns: 1fr 1fr;
     gap: 20px;
     align-items: start;
+    margin-top: 40px;
+    page-break-inside: avoid;
   }
 
   .payment-details {
@@ -1013,13 +1015,14 @@ body {
   .total-row.grand-total {
     font-size: 16px;
     font-weight: 700;
+    margin-top: 18px;
   }
 
   /* ========================= */
   /* SIGNATURE */
   /* ========================= */
     .invoice-signature {
-    margin-top: 40px;
+    margin-top: 25px;
     page-break-inside: avoid;
   }
 
